# real_options

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  _commodity_selector.py  _date_filter.py  backfill_council_history.py  coffee_factors_data_pull.py  coffee_factors_data_pull_new.py  config.json  config_loader.py  create_mock_data.py  dashboard.py  dashboard_utils.py  data_test.py  debug_report_1341111.csv  deploy.sh  documentation_modifications.md  equity_logger.py  exporter_config.json  install_log_collection.sh  log  logging_config.py  manual_test.py  model_signals.csv  notifications.py  options_data_exporte.py  options_data_exporter.py  orchestrator.py  patch_reconcile.py  performance_analyzer.py  position_monitor.py  pr_diff.txt  prediction_api.py  prob_coffee_options.py  pyproject.toml  reconcile_trades.py  requirements.txt  (+18 more)
.Jules/: palette.md
.claude/: settings.json
.jules/: bolt.md  knowledge.md  palette.md  quant.md  readiness_snapshot.md  sentinel.md
archive/: coffee_factors_data_pull.py  coffee_futures_data_reformatted_2025-10-06.csv  prob_coffee_options.py  trade_ledger_2025-10-23.csv  trade_old_ledger.csv
backtesting/: __init__.py  simple_backtest.py  surrogate_models.py
coffee_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: __init__.py  api_costs.json  commodity_profiles.py  databento_mappings.py
data/: council_history.csv  daily_equity.csv  state.json
dev/: config.json  decision_signals.csv  log_summary.txt  model_signals.csv  system_health_digest.json  system_snapshot.txt  trade_ledger.csv
docs/: refactor_metrics.md
model/: LSTM_coffee.ipynb
models/: hybrid_blender.joblib  model_ready_features_GARCH_T5_TA.csv  x_scaler_sequential.joblib  xgboost_tuned_component_0.ubj  xgboost_tuned_component_2.ubj  xgboost_tuned_component_4.ubj  xgboost_tuned_predictions.csv  y_scaler_t5.joblib
pages/: 10_The_Funnel.py  1_Cockpit.py  2_The_Scorecard.py  3_The_Council.py  3_🧠_The_Council.py  (+6 more)
(+540 files in other folders)
