[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-trading-bot"
version = "0.1.0"
description = "A trading bot for coffee futures options."
authors = [
  { name="User" },
]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "ib_insync",
    "numpy",
    "scipy",
    "requests",
    "pytz",
    "yfinance",
    "fredapi",
    "Nasdaq-Data-Link",
    "pytest",
    "pytest-asyncio",
    "feedparser",
    "python-dotenv"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["trading_bot*"]
