[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-trading-bot"
version = "0.1.0"
description = "A trading bot for coffee futures options."
authors = [
  { name="User" },
]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "ib_insync",
    "numpy",
    "scipy",
    "requests",
    "pytz",
    "yfinance",
    "fredapi",
    "Nasdaq-Data-Link",
    "pytest",
    "pytest-asyncio",
    "feedparser",
    "python-dotenv",
    "holidays",
    "pandas",
    "openai>=2.17.0",
    "anthropic>=0.79.0",
    "google-genai>=1.47.0",
    "aiohttp>=3.13.3",
    "plotly>=6.5.2",
    "streamlit>=1.50.0",
    "matplotlib>=3.9.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["trading_bot*"]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
